--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
    <div class="Contact">
       <h1 class="heading">Contact Me</h1>
       <div class="phone-info">
+         <div class="tech">
          <div class="phone-no">
             <i class="fa-solid fa-phone"></i>
             <p>8272056342</p>
@@ -182,6 +183,7 @@
             <i class="fa-brands fa-github"></i>
             <a href="https://github.com/krishnasharma180/Project.git">https://github.com/krishnasharma180/Projects.git</a>
          </div>
+      </div>
          <div class="icons">
             <a href="https://www.instagram.com/krishnasharma._.18/"><i class="fa-brands fa-instagram"></i></a>
               <a href="https://www.facebook.com/Krishna Sharma/"><i class="fa-brands fa-facebook"></i></a>
